--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-  
+
 /*CSS RESET*/
 html, body, div, span, applet, object, iframe,  
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,  
@@ -88,6 +88,7 @@ nav span{
     flex-wrap: wrap;
     justify-content: center;
 }
+
 .title-container div {	
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
     background-position: center;	
@@ -100,6 +101,7 @@ nav span{
     height:60vh;
     margin:5% 0;
 }	
+
 .title-container div:hover {	
     opacity: 80%;	
 }	
@@ -136,7 +138,7 @@ button:hover{
     width:100%;
 }
 
-
+/* 
 @media (max-width: 500px) {
     body {
         flex-direction: column;
@@ -150,11 +152,13 @@ button:hover{
         font-size: 1rem;
     }
 
-    .title-container{
+    /* .title-container{
         width: 100%;
         height: auto;
         margin: 0 auto;
-    }
+    } */
+
+    
 
     h1{
         font-size: 3rem;;
@@ -180,7 +184,7 @@ button:hover{
         margin: 0 auto;
     }
 
-}
+} */
 
 
 
