--- a/css/index.css
+++ b/css/index.css
@@ -139,65 +139,62 @@ button:hover{
 }
 
  
-@media (max-width: 500px) {
-    body {
+@media(max-width:500px){
+    body{
         flex-direction: column;
+        align-items: center;
+        margin:0 auto;
+        box-sizing: border-box;
     }
-
-    nav{
+ 
+    nav {
         width: 50%;
     }
 
     nav a{
-        font-size: 1rem;
+        font-size: 1.5rem;   
     }
 
-    .title-container{
-        width: 100%;
-        /* height: auto; */
-        margin: 0 auto;
-    } 
-    
-    .title-container div{
+    .title-container div{   
         background-size: 225%;
-        height: 20rem;;
+        height: 20rem;
         margin: 1rem auto;
         padding: 2rem;
-    }	
-
+    }
+    
+    
     h1{
-        font-size: 3rem;;
+        font-size: 3rem;
     }
-
     button{
-        font-size: 1rem;;
+        font-size: 1rem;
+        border-radius:.25rem
     }
-
+    
     .title-container hr{
-        width: 100%;
+        width:100%;
     }
 
-    .artist-container{
+    .artists-container {
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 45rem;
     }
-
-    .artist img {
+    .artist{
+        width: 30rem;
+    }
+    .artist img{
         width: 100%;
+        justify-content: center;
+        align-items: center;
         height: auto;
         margin: 0 auto;
+        padding: 2rem;
     }
-
-    .artist a{
+    .bio{
         font-size: 1rem;
+        width: 30rem;
+        
     }
-
-    .artist .bio{
-        font-size: 1rem;
-    }
-
-
 }
-
-
-
-
