--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,11 @@ button:hover{
         margin: 0 auto;
         padding: 2rem;
     }
+
+    a{
+        font-size: 1.5rem;
+    }
+
     .bio{
         font-size: 1rem;
         width: 30rem;
